# a-piece-of-shit

./: .gitignore  CMakeLists.txt  datasource.js  task_graph_profiler.html
cxx_utilities/: CMakeLists.txt
cxx_utilities/cmake/: cxx-config.cmake.in
cxx_utilities/include/: cxx.natvis  cxx_common.h  cxx_file.h  cxx_math.h  cxx_scope.h  cxx_view.h
cxx_utilities/include/cxx_math/: cxx_aabb.h  cxx_angle.h  cxx_base_angle.h  cxx_base_color.h  cxx_base_matrix.h  cxx_base_point.h  cxx_base_vector.h  cxx_color.h  cxx_color3.h  cxx_color4.h  cxx_degree.h  cxx_dual_quaternion.h  cxx_euler.h  cxx_mathcommon.h  cxx_mathutility.h  cxx_matrix.h  cxx_matrix2x2.h  cxx_matrix2x3.h  cxx_matrix3x3.h  cxx_matrix3x4.h  cxx_matrix4x4.h  cxx_point.h  cxx_point2.h  cxx_point3.h  cxx_quaternion.h  cxx_radian.h  cxx_ray.h  cxx_rotation.h  cxx_vector.h  cxx_vector2.h  cxx_vector3.h  cxx_vector4.h
cxx_utilities/source/: dummy.cpp
cxx_utilities/unittest/: aabb2d_test.cpp  aabb3d_test.cpp  color3_test.cpp  color4_test.cpp  common_test.cpp  cxx_unittest.sln  cxx_unittest.vcxproj  cxx_unittest.vcxproj.filters  dual_quaternion_test.cpp  eular_test.cpp  matrix2x2_test.cpp  matrix3x2_test.cpp  matrix3x3_test.cpp  matrix4x4_test.cpp  measure_test.cpp  quaternion_test.cpp  rect_test.cpp  stdafx.cpp  stdafx.h  utility_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp  vector_swizzle.cpp  vector_test.cpp
image_loading_test/: .gitattributes  CMakeLists.txt  dxt1_100x128.dds  dxt1_128x128.dds  dxt1a_100x128.dds  dxt1a_128x128.dds  dxt3_100x128.dds  dxt3_128x128.dds  dxt3a_100x128.dds  dxt3a_128x128.dds  dxt5_100x128.dds  dxt5_128x128.dds  dxt5a_100x128.dds  dxt5a_128x128.dds  grayscale_100x128.tga  grayscale_128x128.tga  palette_100x128.tga  palette_128x128.tga  rgb_100x128.dds  rgb_100x128.tga  rgb_128x128.dds  rgb_128x128.tga  rgba_100x128.dds  rgba_100x128.tga  rgba_128x128.dds  rgba_128x128.tga  test.cpp  winmain.cpp
image_reader/: CMakeLists.txt
image_reader/include/: image.h  loader.h  prior_queue.h  resource.h
image_reader/source/image/: bmp.cpp  dds.cpp  image.cpp  image.hpp  png.cpp  tga.cpp
image_reader/source/loader/: loader.cpp  resource.cpp
mock_resource_loading_test/: MockMaterialRes.cs  Program.cs  mock_resource_loading_test.csproj  mock_resource_loading_test.sln
mock_resource_loading_test/Properties/: AssemblyInfo.cs
task_graph/: CMakeLists.txt  main.cpp  mpmc_bounded_queue.h  task_graph.cpp  task_graph.h
